[package]
name = "mdns-crates-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmdns = "0.6.2"
env_logger =  { version = "0.9", default-features = false, features = ["termcolor","humantime","atty"] }
rxrust = "0.15.0"

[dependencies.mdns]
git = "https://github.com/plietar/rust-mdns"
