[package]
name = "mdns-crates-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmdns = { path = "../libmdns"}
rxrust = "0.15.0"
log = "0.4"
env_logger =  { version = "0.9", default-features = false, features = ["termcolor","humantime","atty"] }